<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tictactoe"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/backgroundColor"
    >
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonGrid"
        android:layout_alignEnd="@+id/buttonGrid">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="end">
            <TextView
                android:id="@+id/equationLineOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textSize="25sp"
                android:textColor="@color/lightGrey" />
            <TextView
                android:id="@+id/equationLineTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textSize="50sp"
                android:textColor="@color/darkGrey" />
        </LinearLayout>
    </RelativeLayout>
    <GridLayout
        android:layout_alignParentBottom="true"
        android:id="@+id/buttonGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:columnCount="4"
        android:rowCount="6"
        android:layout_gravity="center_horizontal">
        <Button
            android:tag="00"
            android:onClick="onClearClick"
            android:text="@string/clear"
            style="@style/nonNumberButton"
            />
        <Button
            android:tag="01"
            android:onClick="onPlusMinusClick"
            android:text="@string/plusMinus"
            style="@style/nonNumberButton"
            />
        <Button
            android:tag="02"
            android:onClick="onBackSpaceClick"
            android:text="@string/backspace"
            style="@style/nonNumberButton"
            />
        <Button
            android:tag="03"
            android:onClick="onOperatorClick"
            android:text="@string/divide"
            style="@style/nonNumberButton"
            />
        <Button
            android:tag="10"
            android:onClick="onCellClick"
            android:text="@string/seven"
            style="@style/calculatorButton"
            />
        <Button
            android:tag="11"
            android:onClick="onCellClick"
            android:text="@string/eight"
            style="@style/calculatorButton"
            />
        <Button
            android:tag="12"
            android:onClick="onCellClick"
            android:text="@string/nine"
            style="@style/calculatorButton"
            />
        <Button
            android:tag="13"
            android:onClick="onOperatorClick"
            android:text="@string/multiply"
            style="@style/nonNumberButton"
            />
        <Button
            android:tag="21"
            android:onClick="onCellClick"
            android:text="@string/four"
            style="@style/calculatorButton"
            />
        <Button
            android:tag="22"
            android:onClick="onCellClick"
            android:text="@string/five"
            style="@style/calculatorButton"
            />
        <Button
            android:tag="23"
            android:onClick="onCellClick"
            android:text="@string/six"
            style="@style/calculatorButton"
            />
        <Button
            android:tag="13"
            android:onClick="onOperatorClick"
            android:text="@string/minus"
            style="@style/nonNumberButton"
            />
        <Button
            android:tag="30"
            android:onClick="onCellClick"
            android:text="@string/one"
            style="@style/calculatorButton"
            />
        <Button
            android:tag="31"
            android:onClick="onCellClick"
            android:text="@string/two"
            style="@style/calculatorButton"
            />
        <Button
            android:tag="32"
            android:onClick="onCellClick"
            android:text="@string/three"
            style="@style/calculatorButton"
            />
        <Button
            android:tag="33"
            android:onClick="onOperatorClick"
            android:text="@string/plus"
            style="@style/nonNumberButton"
            />
        <Button
            android:tag="40"
            android:onClick="onCellClick"
            android:text="@string/zero"
            style="@style/calculatorButton"
            />
        <Button
            android:tag="41"
            android:onClick="onCellClick"
            android:text="@string/decimal"
            style="@style/nonNumberButton"
            />
        <Button
            android:tag="42"
            android:onClick="onEqualClick"
            android:text="@string/equal"
            style="@style/nonNumberButton"
            />
    </GridLayout>
</RelativeLayout>
